test/ClangImporter/invalid_bridging_header.code
// RUN: not %target-language-frontend -typecheck -enable-objc-interop -import-objc-header %S/Inputs/invalid_bridging_header.h %s -diagnostic-style toolchain -o - 2>&1 | %FileCheck %s

// CHECK: 1:12: error: cannot find interface declaration for 'UndeclaredError'
// CHECK: error: failed to import bridging header
